--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,19 @@ keywords = ['voxel', 'MagicaVoxel', 'game', 'bevy']
 exclude = ["assets", "examples"]
 
 [dependencies]
-bevy_ecs = { version = "0.9" }
-bevy_app = { version = "0.9" }
-bevy_asset = { version = "0.9" }
-bevy_render = { version = "0.9" }
-bevy_utils = { version = "0.9" }
-bevy_pbr = { version = "0.9" }
-bevy_scene = { version = "0.9" }
-bevy_transform = { version = "0.9" }
-bevy_hierarchy = { version = "0.9" }
+bevy_ecs = { path="../bevy/crates/bevy_ecs", version = "0.9" }
+bevy_app = { path="../bevy/crates/bevy_app", version = "0.9" }
+bevy_asset = { path="../bevy/crates/bevy_asset", version = "0.9" }
+bevy_render = { path="../bevy/crates/bevy_render", version = "0.9" }
+bevy_utils = { path="../bevy/crates/bevy_utils", version = "0.9" }
+bevy_pbr = { path="../bevy/crates/bevy_pbr", version = "0.9" }
+bevy_scene = { path="../bevy/crates/bevy_scene", version = "0.9" }
+bevy_transform = { path="../bevy/crates/bevy_transform", version = "0.9" }
+bevy_hierarchy = { path="../bevy/crates/bevy_hierarchy", version = "0.9" }
+
 anyhow = "1.0.36"
 thiserror = "1.0.22"
 dot_vox = "4.1.0"
 
 [dev-dependencies]
-bevy = { version = "0.9" }
+bevy = { path="../bevy", version = "0.9" }
